@@ -43,7 +43,7 @@ use Exporter         ();
 use File::Spec       ();
 use File::Spec::Unix ();
 use Probe::Perl      ();
-use IPC::Run3        ();
+use IPC::Run3        qw( run3 );
 use Test::Builder    ();
 
 our @ISA     = 'Exporter';
@@ -93,6 +93,24 @@ sub path ($) {
   );
 }
 
+## This can and should be removed if/when IPC::Run3 is fixed on MSWin32
+## See rt94685, rt46333, rt95308 and IPC-Run3/gh#9"
+sub _borked_ipc_run3 () {
+  $^O eq 'MSWin32' &&
+  ! eval { $! = 0; IPC::Run3::run3 [ perl, -e => 'BEGIN {die}' ], \undef, \undef, \undef; 1 }
+}
+
+if(_borked_ipc_run3())
+{
+  no warnings 'redefine';
+  *run3 = sub {
+    $! = 0;
+    my $r = IPC::Run3::run3(@_, { return_if_system_error => 1 });
+    Carp::croak($!) if $! && $! !~ /Inappropriate I\/O control operation/;
+    $r;
+  };
+}
+
 #####################################################################
 # Test Functions
 
@@ -122,7 +140,7 @@ sub script_compiles {
   my $stdin  = '';
   my $stdout = '';
   my $stderr = '';
-  my $rv     = eval { IPC::Run3::run3( $cmd, \$stdin, \$stdout, \$stderr ) };
+  my $rv     = eval { run3( $cmd, \$stdin, \$stdout, \$stderr ) };
   my $error  = $@;
   my $exit   = $? ? ($? >> 8) : 0;
   my $signal = $? ? ($? & 127) : 0;
@@ -232,7 +250,7 @@ sub script_runs {
   my $cmd    = [ perl, @libs, $path, @$args ];
      $stdout = '';
      $stderr = '';
-  my $rv     = eval { IPC::Run3::run3( $cmd, $opt->{stdin}, $opt->{stdout}, $opt->{stderr} ) };
+  my $rv     = eval { run3( $cmd, $opt->{stdin}, $opt->{stdout}, $opt->{stderr} ) };
   my $error  = $@;
   my $exit   = $? ? ($? >> 8) : 0;
   my $signal = $? ? ($? & 127) : 0;
